--- a/html/index.html
+++ b/html/index.html
@@ -6,20 +6,6 @@
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/xeditable.css">
-    
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/bootstrap.js"></script>
-    <script type="text/javascript" src="../js/angular.js"></script>
-    <script type="text/javascript" src="../js/angular-route.js"></script>
-    <script type="text/javascript" src="../js/angular-dragdrop.js"></script>
-    <script type="text/javascript" src="../js/xeditable.js"></script>
-    <script type="text/javascript" src="../js/ui-bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/clipboard.min.js"></script>
-    <script type="text/javascript" src="../js/app.js"></script>
-    <script type="text/javascript">
-        (function(){
-        })();
-    </script>
 </head>
 <body ng-controller="MainController as main">
 
@@ -79,5 +65,16 @@
     <div class="clearfix"></div>
     <div ng-view></div>
     <div class="clearfix"></div>
+
+    <!-- Load JS -->
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/angular.js"></script>
+    <script type="text/javascript" src="../js/angular-route.js"></script>
+    <script type="text/javascript" src="../js/angular-dragdrop.js"></script>
+    <script type="text/javascript" src="../js/xeditable.js"></script>
+    <script type="text/javascript" src="../js/ui-bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/clipboard.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
 </body>
 </html>
