--- a/html/cluster_build.html
+++ b/html/cluster_build.html
@@ -1,4 +1,3 @@
-
 <div class="full-container buildcluster">
     <div class="row">
         <div class="col-md-3  build-settings">
@@ -7,7 +6,7 @@
                 <div class="tab-pane active" id="tab-clusterbuild-services">
                     <div class="toolbar">
                         <button class="btn btn-primary" ng-click="addNode()"><span class="glyphicon glyphicon-plus"></span>&nbsp;Node</button>
-                        <button class="btn btn-primary" ng-click="finalize()">Finalize</button>
+                        <button class="btn btn-primary" ng-click="finalize()" data-toggle="tooltip" data-placement="top" title="Build Cluster and Blueprint">Finalize</button>
                         <div class="trash pull-right" dnd-list="[]">
                             <span class="glyphicon glyphicon-trash"></span><span>Trash</span>
                         </div>
@@ -112,3 +111,9 @@
 
 </div>
 
+<!-- Load JS -->
+<script type="text/javascript">
+    (function(){
+      $('[data-toggle="tooltip"]').tooltip()
+    })();
+</script>
