replaced default with primary buttons

--- a/html/index.html
+++ b/html/index.html
@@ -49,9 +49,9 @@
           
           <ul class="nav navbar-nav navbar-right" ng-show="$location.path()=='/'">
             <li><p class="navbar-text"><strong>View:&nbsp;</strong></p></li>
-            <li><button class="btn btn-default navbar-btn" href="#cluster-services-view" data-toggle="tab">Service</button></li>
-            <li><button class="btn btn-default navbar-btn" href="#cluster-comp-view" data-toggle="tab">Component</button></li>
-            <li><button class="btn btn-default navbar-btn" href="#cluster-list-view" data-toggle="tab">List</button></li>
+            <li><button class="btn btn-primary navbar-btn" href="#cluster-services-view" data-toggle="tab">Service</button></li>
+            <li><button class="btn btn-primary navbar-btn" href="#cluster-comp-view" data-toggle="tab">Component</button></li>
+            <li><button class="btn btn-primary navbar-btn" href="#cluster-list-view" data-toggle="tab">List</button></li>
           </ul>
           <ul class="nav navbar-nav navbar-right" ng-show="$location.path()=='/' || $location.path()=='/build'">
             <li><p class="navbar-text"><label><input type="checkbox" name="useFullnames" ng-model="config.useFullnames" />&nbsp;<strong>show fullnames</strong></label></p></li>
