--- a/html/node_view.html
+++ b/html/node_view.html
@@ -94,7 +94,7 @@
                     <select ng-model="comp" ng-options="comp.name group by comp.service.name for comp in comps = comps" class="form-control" required  ng-change="formChange()"></select>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-default" ng-click="addToNode()">Add</button>
+                    <button class="btn btn-primary" ng-click="addToNode()">Add</button>
                 </div>
             </form>
         </div>
