--- a/html/settings_components.html
+++ b/html/settings_components.html
@@ -40,7 +40,7 @@
                     <input type="text" name="shortname" class="form-control" ng-model="editCompObj.shortname" required maxlength="7" />
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-default"><a href="settings/components#tab-tbl-comps" data-toggle="tab">Done</a></button>
+                    <button class="btn btn-primary"><a href="settings/components#tab-tbl-comps" data-toggle="tab">Done</a></button>
                 </div>
 
             </form>
