--- a/html/settings_services.html
+++ b/html/settings_services.html
@@ -58,7 +58,7 @@
                         <input type="text" name="group_c" class="form-control" ng-model="editServiceObj.group_c" />
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-default"><a href="settings/services#tab-tbl-services" data-toggle="tab">Done</a></button>
+                        <button class="btn btn-primary"><a href="settings/services#tab-tbl-services" data-toggle="tab">Done</a></button>
                     </div>
                 </form>
             </div>
