--- a/html/cluster_config.html
+++ b/html/cluster_config.html
@@ -6,7 +6,7 @@
                 <textarea class="form-control" ng-model="nodeCtrl.newClusterInput" rows="5"></textarea>
             </div>
             <div class="form-group">
-                <button class="btn btn-default" ng-click="nodeCtrl.importNewCluster()">Go</button>
+                <button class="btn btn-primary" ng-click="nodeCtrl.importNewCluster()">Go</button>
             </div>
         </form>
     </div>
