--- a/html/importexport.html
+++ b/html/importexport.html
@@ -12,7 +12,7 @@
                     <textarea class="form-control" ng-model="importCluster" rows="5"></textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-default" ng-click="import()">Import</button>
+                    <button class="btn btn-primary" ng-click="import()">Import</button>
                 </div>
             </form>
         </div>
