added footer to template

--- a/html/index.html
+++ b/html/index.html
@@ -66,6 +66,13 @@
     <div ng-view></div>
     <div class="clearfix"></div>
 
+    <footer class="footer">
+      <div class="container">
+        <hr />
+        <p>&nbsp;</p>
+      </div>
+    </footer>
+
     <!-- Load JS -->
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
