--- a/html/node_view.html
+++ b/html/node_view.html
@@ -5,8 +5,11 @@
     <div class="tab-content">
         <div class="tab-pane" id="cluster-comp-view">
             <h1>{{clusterName}} ({{clusterVersion}})</h1>
-            <div class="row">
-                <div class="col-md-6" ng-repeat="node in clusterNodes">
+            <div class="row {{config.showZones ? 'zone' : ''}}" ng-repeat="zone in clusterNodes">
+                <div class="col-lg-12" ng-show="config.showZones">
+                    <h4>{{zone[0].zone}}</h4>
+                </div>
+                <div class="col-md-6" ng-repeat="node in zone">
                     <div class="box">
                         <div class="box-main">
                             <div class="cbox" 
@@ -27,8 +30,11 @@
 
         <div class="tab-pane" id="cluster-comp-classic-view">
             <h1>{{clusterName}} ({{clusterVersion}})</h1>
-            <div class="row freefloat">
-                <div class="node-ff" ng-repeat="node in clusterNodes">
+            <div class="row {{config.showZones ? 'zone' : 'freefloat'}}" ng-repeat="zone in clusterNodes">
+                <div class="col-lg-12" ng-show="config.showZones">
+                    <h4>{{zone[0].zone}}</h4>
+                </div>
+                <div class="{{config.showZones ? 'col-xs-4' : 'node-ff'}}" ng-repeat="node in zone">
                     <div class="box">
                         <div class="box-header classic">
                             <span>{{node.getHostname()}}</span>
@@ -47,8 +53,11 @@
         <div class="tab-pane active" id="cluster-services-view">
         <!-- service view -->
             <h1>{{clusterName}} ({{clusterVersion}})</h1>
-            <div class="row">
-                <div class="col-md-6" ng-repeat="node in clusterNodes">
+            <div class="row {{config.showZones ? 'zone' : ''}}" ng-repeat="zone in clusterNodes">
+                <div class="col-lg-12" ng-show="config.showZones">
+                    <h4>{{zone[0].zone}}</h4>
+                </div>
+                <div class="col-md-6" ng-repeat="node in zone">
                     <div class="box">
                         <div class="box-main">
                             <div class="cbox" 
@@ -70,8 +79,11 @@
         <div class="tab-pane" id="cluster-services-classic-view">
         <!-- service view -->
             <h1>{{clusterName}} ({{clusterVersion}})</h1>
-            <div class="row freefloat">
-                <div class="node-ff" ng-repeat="node in clusterNodes">
+            <div class="row {{config.showZones ? 'zone' : 'freefloat'}}" ng-repeat="zone in clusterNodes">
+                <div class="col-lg-12" ng-show="config.showZones">
+                    <h4>{{zone[0].zone}}</h4>
+                </div>
+                <div class="{{config.showZones ? 'col-xs-4' : 'node-ff'}}" ng-repeat="node in zone">
                     <div class="box">
                         <div class="box-header classic">
                             <span>{{node.getHostname()}}</span>
@@ -92,8 +104,8 @@
         <!-- list view -->
             <h1>{{clusterName}} ({{clusterVersion}})</h1>
             <table class="table table-striped tbl-list-view">
-                <tbody>
-                    <tr ng-repeat="node in clusterNodes">
+                <tbody ng-repeat="zone in clusterNodes">
+                    <tr ng-repeat="node in zone">
                         <td>
                             <span ng-repeat="hostname in node.hostnames">
                                 {{hostname}}
