created high-level angular modules for different sub components

--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@
     <script src="bcomps/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="bcomps/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bcomps/clipboard/dist/clipboard.min.js"></script>
+    <script src="app/mods/nodeview/cNodeView.js"></script>
+    <script src="app/mods/nodeview/cEditEnv.js"></script>
+    <script src="app/mods/nodeview/cEditNode.js"></script>
+    <script src="app/mods/nodeview/fCluster.js"></script>
+    <script src="app/mods/nodeview/fComponent.js"></script>
+    <script src="app/mods/nodeview/fConfig.js"></script>
+    <script src="app/mods/nodeview/fConfigItem.js"></script>
+    <script src="app/mods/nodeview/fEnvironment.js"></script>
+    <script src="app/mods/nodeview/fNode.js"></script>
+    <script src="app/mods/nodeview/fService.js"></script>
+    <script src="app/mods/nodeview/sEnvironment.js"></script>
+    <script src="app/mods/nodeview/sCluster.js"></script>
+    <script src="app/mods/blueprint/cBlueprint.js"></script>
+    <script src="app/mods/blueprint/sBlueprint.js"></script>
+    <script src="app/mods/build/cBuild.js"></script>
+    <script src="app/mods/build/sBuildCluster.js"></script>
+    <script src="app/mods/importexport/cImportExport.js"></script>
     <script src="app/app.js"></script>
 
 </body>
