--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Cluster - Node View</title>
-    <link rel="stylesheet" href="bcomps/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/vendor/css/bootstrap.min.css" type="text/css" />
+    <!-- build:css assets/css/style.min.css -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="bcomps/angular-xeditable/dist/css/xeditable.min.css" type="text/css" />
+    <!-- /build -->
+    <link rel="stylesheet" href="assets/vendor/css/xeditable.min.css" type="text/css" />
 </head>
 <body ng-controller="MainController as main">
 
@@ -77,18 +79,17 @@
     </footer>
 
     <!-- bootstrap and jquery -->
-    <script src="bcomps/jquery/dist/jquery.min.js"></script>
-    <script src="bcomps/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Angular -->
-    <script src="bcomps/angular/angular.min.js"></script>
-    <script src="bcomps/angular-route/angular-route.min.js"></script>
-    <script src="bcomps/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
-    <script src="bcomps/angular-xeditable/dist/js/xeditable.js"></script>
-    <script src="bcomps/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="bcomps/clipboard/dist/clipboard.min.js"></script>
+    <script src="assets/vendor/libs/jquery.min.js"></script>
+    <script src="assets/vendor/libs/bootstrap.min.js"></script>
+    <!-- Angular Dependencies -->
+    <script src="assets/vendor/libs/angular.min.js"></script>
+    <script src="assets/vendor/libs/angular-route.min.js"></script>
+    <script src="assets/vendor/libs/angular-drag-and-drop-lists.min.js"></script>
+    <script src="assets/vendor/libs/xeditable.min.js"></script>
+    <script src="assets/vendor/libs/ui-bootstrap-tpls.min.js"></script>
+    <script src="assets/vendor/libs/clipboard.min.js"></script>
+    <!-- build:js app/app.min.js -->
     <script src="app/mods/nodeview/cNodeView.js"></script>
-    <script src="app/mods/nodeview/cEditEnv.js"></script>
-    <script src="app/mods/nodeview/cEditNode.js"></script>
     <script src="app/mods/nodeview/fCluster.js"></script>
     <script src="app/mods/nodeview/fComponent.js"></script>
     <script src="app/mods/nodeview/fConfig.js"></script>
@@ -104,6 +105,6 @@
     <script src="app/mods/build/sBuildCluster.js"></script>
     <script src="app/mods/importexport/cImportExport.js"></script>
     <script src="app/app.js"></script>
-
+    <!-- /build -->
 </body>
 </html>
