added beta support for blueprint imports added zone title to all views

--- a/app/mods/importexport/importexport.html
+++ b/app/mods/importexport/importexport.html
@@ -8,7 +8,7 @@
                     <textarea class="form-control" ng-model="importEnv" rows="5"></textarea>
                 </div>
                 <div class="form-group">
-                    <label>Cluster</label>
+                    <label>Cluster (Exporter format or Ambari Blueprint)</label>
                     <textarea class="form-control" ng-model="importCluster" rows="5"></textarea>
                 </div>
                 <div class="form-group">
